Fix dark mode systeme et affichage mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,7 +17,20 @@ html.dark {
   --bg-color: #030303;
   --text-color: #ffffff;
 }
+@media (prefers-color-scheme: dark) {
+  :root:not(.light) {
+    --bg-color: #030303;
+    --text-color: #ffffff;
+  }
+  
+  .gradient-text {
+    background-image: linear-gradient(180deg, #c099ff 0%, rgba(255, 255, 255, 0.3) 100%);
+  }
 
+  #contact form {
+    background: rgb(16, 16, 16);
+  }
+}
 body {
   margin: 0;
   padding: 0;
